# stroy

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .env.dev  gitignore  pyproject.toml
backend/authorization/: apps.py  backends.py  serializers.py  urls.py  views.py
backend/business/: admin.py  exceptions.py  filters.py  models.py  serializers.py  signals.py  types.py  urls.py  utils.py  views.py  webhooks.py
backend/business/migrations/: 0001_initial.py
backend/business/repositories/: invoice.py  payment.py  subscription.py  wallet.py
backend/business/services/: payment.py  receipt.py
backend/config/: os.py  settings.py  urls.py
backend/config/settings/: __init__.py  (+11 more)
backend/departments/: apps.py  filters.py  models.py  repository.py  signals.py  urls.py  views.py
backend/documents/: apps.py  filters.py  models.py  repository.py  serializers.py  signals.py  types.py  urls.py  utils.py  views.py
backend/guards/: apps.py  filters.py  models.py  repository.py  serializers.py  signals.py  types.py  urls.py  views.py
backend/journal/: filters.py  models.py  repository.py  serializers.py  signals.py  types.py  urls.py  views.py
backend/projects/: admin.py  apps.py  filters.py  models.py  repository.py  serializers.py  signals.py  types.py  urls.py  views.py
backend/tags/: admin.py  apps.py  filters.py  models.py  repository.py  serializers.py  signals.py  urls.py  views.py
backend/users/: admin.py  apps.py  filters.py  managers.py  models.py  repository.py  serializers.py  signals.py  types.py  urls.py  views.py
(+533 files in other folders)
